feat: Implement Paiement and Session services with CRUD operations
- Added PaiementService interface and its implementation (PaiementServiceImpl) for managing payments.
- Introduced methods for creating, updating, retrieving, and deleting payments, as well as uploading payment proof documents.
- Created SessionService interface and its implementation (SessionServiceImpl) for managing sessions.
- Included methods for session management including CRUD operations and filtering by various criteria.
- Added JWT configuration properties for secure token management in application.properties.
- Updated UserDetailsServiceImpl to throw a localized exception message for inactive user accounts.